Fixed an alignment issue

--- a/code/css/style.css
+++ b/code/css/style.css
@@ -635,7 +635,6 @@ ul {
         align-content: center;
     }
     .words-header {
-        text-align: left;
         margin-top: 80px;
     }
     .words-container {
